[gd_scene load_steps=2 format=3 uid="uid://cw8m5hvp2ql7r"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RoundLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Round: 0 / 5"

[node name="InventoryLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Inventory: 0"

[node name="ReserveLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Reserve: 0"

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0 / 100"

[node name="RerollsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Rerolls: 2"

[node name="DrawsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Draws: 1"
